--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Government publications'
 - !lcc 'Z'
+- GITenberg
 title: "Government Documents in Small Libraries\r\nReprinted from Report of Board\
   \ of Library Commissioners of Ohio for the Year ending November 15, 1909."
 url: http://www.gutenberg.org/ebooks/26551
